# SwiftOCA

./: .gitignore  CMakeLists.txt  Dockerfile  FLUTTER.md  LICENSE.md  Package.swift  README.md  TODO.md
Sources/: CMakeLists.txt
Sources/COpenSSL/: CMakeLists.txt  module.modulemap  shim.h
Sources/KeyPathShims/: .BuiltinShims.swift.swp  KeyPathShims.swift
Sources/OCC/ControlClasses/: Root.swift
Sources/OCC/ControlClasses/Agents/: EventHandler.swift
Sources/OCC/ControlClasses/Managers/: DeviceManager.swift  LibraryManager.swift  SubscriptionManager.swift
Sources/OCC/ControlClasses/Workers/: Matrix.swift  Worker.swift
Sources/OCC/ControlDataTypes/: ApplicationNetworkDataTypes.swift  BoundedProperty.swift  DefaultObjectNumbers.swift  List2D.swift  MatrixVectorProperty.swift  ModelDescription.swift  ModelGUID.swift  Property.swift
Sources/OCF/Messages/: Command.swift
Sources/OCP.1/: AES70OCP1Connection+Objects.swift  AES70OCP1Connection.swift  BinaryCodingConfiguration+OCP1.swift
Sources/SwiftOCA/: CMakeLists.txt
Sources/SwiftOCA/AES70/: AES70OCP1CFSocketConnection.swift  AES70OCP1Connection+Codable.swift  AES70OCP1Connection+Messages.swift  AES70OCP1Connection+Objects.swift  AES70OCP1Connection+Subscribe.swift  AES70OCP1Connection.swift  AES70OCP1ConnectionMonitor+Codable.swift  AES70OCP1ConnectionMonitor.swift  AES70OCP1FlyingSocksConnection.swift  AES70OCP1SocketConnection.swift  BinaryCodingConfiguration+OCP1.swift
Sources/SwiftOCA/AES70/Backend/: .AES70OCP1CFSocketConnection.swift.swp  AES70OCP1CFSocketConnection.swift  AES70OCP1FlyingSocksConnection.swift  AES70OCP1IORingConnection.swift  AES70OCP1SPIConnection.swift
Sources/SwiftOCA/AES70/SocketBackend/: AES70OCP1CFSocketConnection.swift  AES70OCP1FlyingSocksConnection.swift  AES70OCP1SocketConnection.swift
Sources/SwiftOCA/OCA/: Browser.swift  ClassRegistry.swift  Connection.swift  ConnectionBroker.swift  OcaObjectCache.swift  OcaPeerIdentity.swift
Sources/SwiftOCA/OCA/AES70/: AES70Browser.swift  AES70ClassRegistry.swift
Sources/SwiftOCA/OCA/Browsing/: ConnectionBroker.swift  DNSServiceBrowser.swift  NetServiceBrowser.swift  NetworkAdvertisingServiceBrowser.swift
Sources/SwiftOCA/OCA/Helpers/: Data+Hex.swift  Data+IntegerCodable.swift  DeviceAddressToString.swift  HostnameResolution.swift  LengthTaggedData16.swift  LengthTaggedData32.swift  Locking.swift  Sequence+AsyncMap.swift  SocketAddressHelpers.swift  Task+Timeout.swift  TimeHelpers.swift  Weak.swift  WinSDKCompat.swift
Sources/SwiftOCA/OCA/OCF/: AnyPublisher+Async.swift  Data+Hex.swift  Data+IntegerCodable.swift  DeviceAddressToString.swift  KeyPathIterable.swift  LengthTaggedData.swift  LengthTaggedData32.swift  Locking.swift  MirrorWrapper.swift  Sequence+AsyncMap.swift  Task+Timeout.swift  UnsafeMutablePointer+PropertyBasePointer.swift
Sources/SwiftOCA/OCA/OCP.1/: OcaClassRegistry.swift
Sources/SwiftOCA/OCC/CollectionTypes/: Array2D.swift  List2D.swift
Sources/SwiftOCA/OCC/ControlClasses/: ObjectNumberMapper.swift  Root+Commands.swift  Root+JSON.swift  Root.swift
Sources/SwiftOCA/OCC/ControlDataTypes/: ApplicationNetworkDataTypes.swift  BaseDataTypes.swift  BoundedProperty.swift  CommandSetDataTypes.swift  CounterDataTypes.swift  DataSetDataTypes.swift  DeviceManagerDataTypes.swift  EventDataTypes.swift  FirmwareManagerDataTypes.swift  GrouperDataTypes.swift  LibraryManagerDataTypes.swift  List2D.swift  LoggingDataTypes.swift  (+20 more)
Sources/SwiftOCA/OCF/: Codable.swift  Errors.swift
Sources/SwiftOCA/OCP.1/: AES70Browser.swift  AES70ClassRegistry.swift  AES70OCP1Connection+Channels.swift  AES70OCP1Connection+Codable.swift  AES70OCP1Connection+Combine.swift  AES70OCP1Connection+Discovery.swift  AES70OCP1Connection+Messages.swift  AES70OCP1Connection+Objects.swift  AES70OCP1Connection+Subscribe.swift  AES70OCP1Connection.swift  AES70OCP1ConnectionMonitor+Codable.swift  AES70OCP1ConnectionMonitor.swift  AES70OCP1SocketConnection.swift  Ocp1CoderAPI.swift  Ocp1Connection+Codable.swift  Ocp1Connection+Connect.swift  Ocp1Connection+Messages.swift  Ocp1Connection+Objects.swift  Ocp1Connection+Subscribe.swift  Ocp1Connection.swift  Ocp1ConnectionMonitor.swift  Ocp1MessageBatcher.swift
Sources/SwiftOCADevice/AES70/: Controller.swift  ControllerDefaultSubscribing.swift  ControllerPrivate.swift  Device.swift  DeviceEndpoint.swift  DeviceEndpointRegistrar.swift  Listener.swift  Logger+Controller.swift  Logging.swift  OCP1ControllerInternal.swift  Ocp1Device.swift  Subscription.swift
Sources/SwiftOCADevice/OCA/: ClassRegistry.swift  ConnectionBroker.swift  Controller.swift  ControllerDefaultSubscribing.swift  Device.swift  DeviceEndpoint.swift  DeviceEndpointRegistrar.swift
Sources/SwiftOCADevice/OCP.1/: .ControllerPrivate.swift.swp  Controller.swift  DeviceEndpoint.swift  Logger+Ocp1ControllerInternal.swift  Ocp1Controller.swift  Ocp1ControllerInternal.swift
Sources/SwiftOCASecure/: CMakeLists.txt
Sources/SwiftOCASecure/OCP.1/: OcaPreSharedKeyProvider.swift  Ocp1TLSTypes.swift
Sources/SwiftOCASecureDevice/OCP.1/: Ocp1TLSDeviceTypes.swift
Sources/SwiftOCAUI/Conformances/: Array+Extras.swift  EnvironmentValues+NavigationPath.swift  EnvironmentValues.swift  LevelSensor.swift  OcaArray2D+Extras.swift  OcaDB+Linear.swift  OcaList2D+Extras.swift  OcaRoot+Binding.swift  OcaRoot+Identifiable.swift
Sources/SwiftOCAUI/ViewModifiers/: PropertyModifiers.swift  RefreshableToInitialState.swift  ShowProgressIfWaiting.swift  SystemToggleStyle.swift
Sources/SwiftOCAUI/Views/: BlockNavigationSplitView.swift  BlockNavigationStackView.swift  BlockView.swift  DetailView.swift  DynamicStack.swift  MuteView.swift  NavigationLabel.swift  NavigationSplitView.swift  NavigationStackView.swift  OcaBlockView.swift  OcaMuteView.swift  OcaRootView.swift  OcaViewRepresentable.swift  PropertyTableView.swift  PropertyView.swift  RootBlockView.swift  UnknownView.swift  View.swift
Sources/dnssd/: CMakeLists.txt  dnssd.h  module.modulemap  shim.c
cmake/modules/: CMakeLists.txt  FindSwiftAtomics.cmake  SwiftOCAConfig.cmake.in  SwiftSupport.cmake
(+321 files in other folders)
